[tool.poetry]
name = "lvm-v"
version = "0.1.0"
description = ""
authors = ["Zac Pullar-Strecker <zacmps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
